--- a/src/components/Brief.astro
+++ b/src/components/Brief.astro
@@ -1,7 +1,7 @@
 ---
-import VectorOne from '../assets/ui-one.svg'
-import VectorTwo from '../assets/ui-two.svg'
-import VectorThree from '../assets/ui-three.svg'
+import VectorOne from '../assets/ui-one.jpg'
+import VectorTwo from '../assets/ui-two.jpg'
+import VectorThree from '../assets/ui-three.jpg'
 
 import Check from '../assets/check.svg'
 import Bolt from '../assets/bolt.svg'
@@ -23,28 +23,31 @@ import Secure from '../assets/lock.svg'
             </div>
 
             <div class="brief-tab one-half column">
-                <h3 class="h2-title">Better, together.</h3>
-                <p class="m-paragraph m-margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                <h3 class="h2-title">Naturally restore balance, energy, and sleep with just a tap</h3>
+                <p class="m-paragraph m-margin">Vibration therapy helps retune your body’s natural frequencies, supporting better energy, deeper sleep, and overall balance. With just a simple scan and targeted vibrations, your body can reset and start healing itself naturally.</p>
 
                 <div class="brief-items">
                  <div class="row m-margin">
                     <div class="one-half column feature-grid">
-                        <img src={Bolt.src} alt="Fast connect">
-                        <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
+                        <img src={Check.src} alt="Fast connect">
+                        <p class="s-paragraph">Scan Your Body: The ring reads your body’s natural frequencies, identifying hidden imbalances in areas like stress, digestion, muscle health, and more.
+</p>
                     </div>
                     <div class="one-half column feature-grid">
-                        <img src={Money.src} alt="Money transfer">
-                        <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
+                        <img src={Check.src} alt="Money transfer">
+                        <p class="s-paragraph">Send the Right Frequencies: Based on your scan, the wearable delivers gentle vibrations to help restore balance where your body needs it most.
+</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="one-half column feature-grid">
-                        <img src={Wallet.src} alt="Digital wallet">
-                        <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
+                        <img src={Check.src} alt="Digital wallet">
+                        <p class="s-paragraph">Feel the Difference: As your body realigns, you experience better energy, deeper sleep, and a natural sense of well-being.
+</p>
                     </div>
                     <div class="one-half column feature-grid">
-                        <img src={Secure.src} alt="Secure connection">
-                        <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
+                        <img src={Check.src} alt="Secure connection">
+                        <p class="s-paragraph">No pills. No effort. Just real results.</p>
                     </div>
                 </div>
               </div>
@@ -54,31 +57,46 @@ import Secure from '../assets/lock.svg'
         <!-- Feature One -->
         <div class="row product-brief-items">
             <div class="brief-tab one-half column">
-                <h3 class="h2-title">Better, together.</h3>
-                <p class="m-paragraph m-margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                <h3 class="h2-title">Natural Relief. Anytime.</h3>
+                <p class="m-paragraph m-margin">A simple, wearable solution for deeper sleep, more energy, and less pain… wherever you go!</p>
 
 
                <div class="brief-items">
                  <div class="row m-margin">
                     <div class="one-half column feature-grid">
-                        <img src={Bolt.src} alt="Fast connect">
-                        <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
+                        <img src={Check.src} alt="Fast connect">
+                        <p class="s-paragraph">Fuller Sleep: Fall asleep faster, stay asleep longer, and wake up truly rested.</p>
                     </div>
                     <div class="one-half column feature-grid">
-                        <img src={Money.src} alt="Money transfer">
-                        <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
+                        <img src={Check.src} alt="Money transfer">
+                        <p class="s-paragraph">Natural Energy: Shake off fatigue and feel refreshed without stimulants.</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="one-half column feature-grid">
-                        <img src={Wallet.src} alt="Digital wallet">
-                        <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
+                        <img src={Check.src} alt="Digital wallet">
+                        <p class="s-paragraph">Take It Anywhere: Small, wearable, and works wherever you go.</p>
                     </div>
                     <div class="one-half column feature-grid">
-                        <img src={Secure.src} alt="Secure connection">
-                        <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
+                        <img src={Check.src} alt="Secure connection">
+                        <p class="s-paragraph">Lift Brain Fog: Clear your mind, sharpen focus, and stay alert.</p>
                     </div>
                 </div>
+
+<br>
+                                 <div class="row m-margin">
+                    <div class="one-half column feature-grid">
+                        <img src={Check.src} alt="Fast connect">
+                        <p class="s-paragraph">Non-Invasive: No pills, no side effects, only natural support.</p>
+                    </div>
+                    <div class="one-half column feature-grid">
+                        <img src={Check.src} alt="Money transfer">
+                        <p class="s-paragraph">And Much More!</p>
+                    </div>
+                </div>
+               
+
+                
               </div>
             </div>
 
@@ -97,31 +115,15 @@ import Secure from '../assets/lock.svg'
         </div>
         
          <div class="brief-tab one-half column">
-            <h3 class="h2-title">Better, together.</h3>
-            <p class="m-paragraph m-margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+            <h3 class="h2-title">Feel the shift, Start your journey today.</h3>
+            <p class="m-paragraph m-margin">Your body already knows how to heal. This just gives it the right support.
+You don’t have to keep running on empty. The sooner you start, the sooner you feel better.<br><br>
+Wear it. Run a Scan. Feel the Difference.<br><br>
+</p>
 
 
-            <div class="brief-items">
-                <div class="row m-margin">
-                <div class="one-half column feature-grid">
-                    <img src={Bolt.src} alt="Fast connect">
-                    <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
-                </div>
-                <div class="one-half column feature-grid">
-                    <img src={Money.src} alt="Money transfer">
-                    <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="one-half column feature-grid">
-                    <img src={Wallet.src} alt="Digital wallet">
-                    <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
-                </div>
-                <div class="one-half column feature-grid">
-                    <img src={Secure.src} alt="Secure connection">
-                    <p class="s-paragraph">Lorem ipsum dolor sit amet, consectetur.</p>
-                </div>
-            </div>
+<a href="/product" class="button button-primary">Wear it and Feel the Shift!</a>
+
           </div>
         </div>
 
@@ -143,6 +145,7 @@ import Secure from '../assets/lock.svg'
   }
   .product-brief-items{
     margin-bottom: 100px;
+    
     .brief-tab{
       padding-top: 50px;
     }
@@ -160,7 +163,7 @@ import Secure from '../assets/lock.svg'
   }
 
   .brief-media{
-    height: 340px;
+    
     position: relative;
     overflow: hidden;
     background-color: #f2f5f9;
