--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,17 +3,23 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro'
 import Brief from '../components/Brief.astro'
+import Features from '../components/Features.astro';
 import Pricing from '../components/Pricing.astro';
 import Customers from '../components/Customers.astro'
+import FAQ from '../components/FAQ.astro';
 import Footer from '../components/Footer.astro';
+import FullVideo from '../components/FullVideo.astro';
 ---
 
-<Layout title="Idol | Micro SaaS landing page">
+<Layout title="Anywhere Healing">
 	<Header />
 	<Hero />
+	<FullVideo />
 	<Brief />
+	<Features />
 	<Pricing />
 	<Customers />
+	<FAQ />
 	<Footer />
 </Layout>
 
