--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Revolutionary healing devices using bioresonance technology">
+		<meta name="description" content="Discover revolutionary healing devices powered by cutting-edge bioresonance technology. Enhance your well-being naturally.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
@@ -348,7 +348,9 @@ const { title } = Astro.props;
 		}
 	}
 	
-
+.snipcart-input {
+	border: 0px !important;
+}
 	
 
 .snipcart-base-button {
